Fixed reset position button not showing

--- a/Front-end/Smart-ParkingLot/src/styles/googlemap.css
+++ b/Front-end/Smart-ParkingLot/src/styles/googlemap.css
@@ -64,6 +64,7 @@ body {
 }
 
 .ui-button-reset {
+  margin-top: 2.5rem;
   min-width: 2.5rem;
 }
 
